EHB - add services of custom1 and custom2