@@ -1,19 +1,18 @@
 package com.example.CRUD.service.impl;
 
 import com.example.CRUD.Validate.ValidateGlobal;
-import com.example.CRUD.dao.SpeakerDao;
+import com.example.CRUD.dao.Speaker1Dao;
+import com.example.CRUD.dao.Speaker2Dao;
 import com.example.CRUD.dao.SpeakerRequestDao;
 import com.example.CRUD.entity.Speaker;
 import com.example.CRUD.repository.SpeakerRepository;
 import com.example.CRUD.service.SpeakerService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ObjectUtils;
-import org.springframework.util.StringUtils;
-import org.springframework.web.bind.MethodArgumentNotValidException;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class SpeakerServiceImpl implements SpeakerService {
@@ -23,30 +22,30 @@ public class SpeakerServiceImpl implements SpeakerService {
 
 
     @Override
-    public List<SpeakerDao> getSpeakers() {
-        return speakerRepository.findAll().stream().map(
-                speaker -> SpeakerDao.builder()
+    public List<Speaker2Dao> getSpeakers() {
+        return speakerRepository.findAll().stream()
+                .map(speaker -> Speaker2Dao.builder()
                         .type(speaker.getType())
                         .salary(speaker.getSalary())
-                        .email(speaker.getEmail())
-                        .age(speaker.getAge())
+                        .address(speaker.getAddress())
+                        .cellphone(speaker.getCellphone())
                         .name(speaker.getName())
-                        .id(speaker.getId()).build()
-        ).toList();
+                        .id(speaker.getId())
+                        .build())
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<SpeakerDao> getSpeakers1() {
+    public List<Speaker1Dao> getSpeakers1() {
         return speakerRepository.findAll().stream().map(
-                speaker -> SpeakerDao.builder()
-                        .status(speaker.getStatus())
+                speaker -> Speaker1Dao.builder()
                         .type(speaker.getType())
-                        .address(speaker.getAddress())
-                        .cellphone(speaker.getCellphone())
+                        .salary(speaker.getSalary())
                         .age(speaker.getAge())
+                        .email(speaker.getEmail())
                         .name(speaker.getName())
                         .id(speaker.getId()).build()
-        ).toList();
+        ).collect(Collectors.toList());
     }
 
     @Override
